Сверстал pdf для страницы товара; изменил скрипт всплывающих уведомлений; изменил структуру окна быстрого просмотра

--- a/contacts.html
+++ b/contacts.html
@@ -3366,7 +3366,7 @@
                                 <input type="checkbox">
                             </label>
                         </div>
-                        <input type="number" placeholder="+7 (___) ___ - __ - __" required>
+                        <input type="tel" placeholder="+7 (___) ___ - __ - __" required>
                         <textarea name="contacts-form-textarea" id="complaintTextarea" cols="30" rows="5"
                             palceholder="Опишите ваше проблему" required placeholder="Опишите вашу проблему"></textarea>
                         <div class="contacts-form-file-row">
@@ -3442,7 +3442,7 @@
                                 <input type="checkbox">
                             </label>
                         </div>
-                        <input type="number" placeholder="+7 (___) ___ - __ - __" required>
+                        <input type="tel" placeholder="+7 (___) ___ - __ - __" required>
                         <textarea name="contacts-form-textarea" id="ceoTextarea" cols="30" rows="5"
                             palceholder="Опишите ваше проблему" required placeholder="Опишите вашу проблему"></textarea>
                         <div class="contacts-form-file-row">
@@ -3566,7 +3566,7 @@
             });
         });
     </script>
-    <script src="./js/toast.js"></script>
+    <script src="./js/toast.min.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
