--- a/pdf-cart.html
+++ b/pdf-cart.html
@@ -219,25 +219,31 @@
             color: #888;
             font-size: 10px;
         }
+
         .footer-list li {
             display: flex;
             justify-content: space-between;
             align-items: baseline;
             gap: 10px;
         }
-        .footer-list li + li {
+
+        .footer-list li+li {
             margin-top: 9px;
         }
+
         .footer-list li p.name {
             font-size: 10px;
         }
+
         .footer-list li p.value {
             font-size: 12px;
             font-weight: 500;
         }
+
         .footer-list li.footer-discount p.value {
             color: #f63b00;
         }
+
         .footer-list li:last-child .name span {
             color: #888;
         }
@@ -257,14 +263,11 @@
             </div>
 
         </header>
-    </div>
-
-    <main>
-        <div class="container">
+        <main>
             <div class="cart-content">
                 <p class="cart-title">
-                    Корзина от <span class="cart-date">22.03.2024</span>&nbsp;<span
-                        class="cart-tiem">11:04</span>&nbsp;(<span class="cart-city">г. Екатеринбург</span>)
+                    Корзина от <span class="cart-date">22.03.2024</span>&nbsp;<span class="cart-tiem">11:04</span>&nbsp;(<span
+                        class="cart-city">г. Екатеринбург</span>)
                 </p>
                 <div class="cart-products">
                     <div class="cart-row">
@@ -393,12 +396,8 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-
-    </main>
-    <footer>
-        <div class="container">
+        </main>
+        <footer>
             <div class="footer-inner">
                 <p class="footer-info">Стоимость товаров актуальна на момент печати&nbsp;<span
                         class="date">22.03.2024</span>&nbsp;<span class="time">11:04</span></p>
@@ -417,8 +416,8 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 
 </html>
