--- a/personal.html
+++ b/personal.html
@@ -1652,6 +1652,23 @@
                         <h2 class="header__mobile-title header__mobile-title--cart">
                             Личный кабинет
                         </h2>
+                        <div class="header__mobile-more">
+                            <button class="header__mobile-more-btn">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
+                            <div class="header__mobile-more-dropdown">
+                                <ul>
+                                    <li>
+                                        <button>Изменить данные профиля</button>
+                                    </li>
+                                    <li>
+                                        <button style="color: #d44f68;">Выйти из аккаунта</button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
