--- a/product.html
+++ b/product.html
@@ -2078,7 +2078,7 @@
                                         Поделиться
                                     </button>
                                 </div>
-                                <div class="product-box__tool product-box__tool--pdf">
+                                <a class="product-box__tool product-box__tool--pdf" download href="./files/product-pdf.pdf">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_224_2550)">
@@ -2101,10 +2101,10 @@
                                             </clipPath>
                                         </defs>
                                     </svg>
-                                    <button>
+                                    <span>
                                         PDF
-                                    </button>
-                                </div>
+                                    </span>
+                                </a>
                             </div>
                             <div class="product-box__additional">
                                 <div class="views">
@@ -2237,7 +2237,7 @@
                                             Поделиться
                                         </button>
                                     </div>
-                                    <div class="product-box__tool product-box__tool--pdf">
+                                    <a class="product-box__tool product-box__tool--pdf" download href="./files/product-pdf.pdf">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <g clip-path="url(#clip0_224_2550)">
@@ -2260,10 +2260,10 @@
                                                 </clipPath>
                                             </defs>
                                         </svg>
-                                        <button>
+                                        <span>
                                             PDF
-                                        </button>
-                                    </div>
+                                        </span>
+                                    </a>
                                 </div>
 
                                 <div class="product-box__brand">
@@ -5320,25 +5320,6 @@
                                 В наличии
                             </div>
                         </div>
-                        <div class="product-box__tool product-box__tool--compare">
-                            <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M0.653809 3.30005H12.1707C13.5521 3.30005 14.6671 4.41672 14.6671 5.80005V8.56672"
-                                    stroke="#282739" stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M3.28339 0.666748L0.653809 3.30006L3.28339 5.93342" stroke="#282739"
-                                    stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M14.6671 14.7H3.15024C1.76888 14.7 0.653809 13.5834 0.653809 12.2V9.43335"
-                                    stroke="#282739" stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M12.0376 17.3333L14.6671 14.7L12.0376 12.0667" stroke="#282739"
-                                    stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                            <button>Сравнить</button>
-                        </div>
                         <div class="product-box__tool product-box__tool--share">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -5489,25 +5470,6 @@
                                     В наличии
                                 </div>
                             </div>
-                            <div class="product-box__tool product-box__tool--compare">
-                                <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M0.653809 3.30005H12.1707C13.5521 3.30005 14.6671 4.41672 14.6671 5.80005V8.56672"
-                                        stroke="#282739" stroke-width="1.2" stroke-miterlimit="10"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M3.28339 0.666748L0.653809 3.30006L3.28339 5.93342" stroke="#282739"
-                                        stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                    <path d="M14.6671 14.7H3.15024C1.76888 14.7 0.653809 13.5834 0.653809 12.2V9.43335"
-                                        stroke="#282739" stroke-width="1.2" stroke-miterlimit="10"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M12.0376 17.3333L14.6671 14.7L12.0376 12.0667" stroke="#282739"
-                                        stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                </svg>
-                                <button>Сравнить</button>
-                            </div>
                             <div class="product-box__tool product-box__tool--share">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -5556,7 +5518,7 @@
                         </div>
 
                         <div class="product-box__brand">
-                            <a class="product-box__brand-link" href="./brand.html">
+                            <a class="product-box__brand-link" href="">
                                 <img class="lazyload" src="./img/brands/lex.webp" alt="">
                             </a>
                         </div>
@@ -5567,9 +5529,38 @@
                                     <p class="price">9 900 ₽</p>
                                     <p class="price-type">Розничная цена</p>
                                 </div>
-                                <button class="round-btn round-btn--fav">
-                                    <img src="./img/icons/heart-card.svg" alt="">
-                                </button>
+                                <div class="product-box__tools-btns">
+                                    <button class="round-btn round-btn--fav round-btn-card skeleton"
+                                        aria-label="Добавить в избранное">
+                                        <svg width="18" height="17" viewBox="0 0 18 17" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M9.50925 15.7583C9.22632 15.8583 8.76032 15.8583 8.47739 15.7583C6.06417 14.9333 0.671875 11.4917 0.671875 5.65833C0.671875 3.08333 2.74392 1 5.2986 1C6.8131 1 8.15286 1.73333 8.99332 2.86667C9.83379 1.73333 11.1819 1 12.688 1C15.2427 1 17.3148 3.08333 17.3148 5.65833C17.3148 11.4917 11.9225 14.9333 9.50925 15.7583Z"
+                                                stroke="#537CE5" stroke-width="1.2" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </button>
+                                    <button class="round-btn round-btn--compare round-btn-card skeleton"
+                                        aria-label="Добавить в сравнение">
+                                        <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M0.653809 3.30005H12.1707C13.5521 3.30005 14.6671 4.41672 14.6671 5.80005V8.56672"
+                                                stroke="#537CE5" stroke-width="1.2" stroke-miterlimit="10"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                            <path d="M3.28339 0.666748L0.653809 3.30006L3.28339 5.93342"
+                                                stroke="#537CE5" stroke-width="1.2" stroke-miterlimit="10"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                            <path
+                                                d="M14.6671 14.7H3.15024C1.76888 14.7 0.653809 13.5834 0.653809 12.2V9.43335"
+                                                stroke="#537CE5" stroke-width="1.2" stroke-miterlimit="10"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                            <path d="M12.0376 17.3333L14.6671 14.7L12.0376 12.0667"
+                                                stroke="#537CE5" stroke-width="1.2" stroke-miterlimit="10"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg>
+                                    </button>
+                                </div>
                             </div>
                             <div class="product-box__delivery">
                                 <img src="./img/icons/delivery.svg" alt="">
@@ -5582,8 +5573,17 @@
                                 </div>
                             </div>
                             <div class="product-box__price-buttons">
-                                <button class="rect-btn rect-btn--add-to-cart blue">Добавить в
-                                    корзину</button>
+                                <div class="product-box__buy-buttons">
+                                    <button class="rect-btn rect-btn--add-to-cart blue">
+                                        Добавить в корзину
+                                    </button>
+                                    <div class="product-card__counter hide">
+                                        <button class="minus">-</button>
+                                        <span>1</span>
+                                        <button class="plus">+</button>
+                                    </div>
+                                </div>
+
                                 <button class="rect-btn rect-btn--click-buy transparent">Купить в 1
                                     клик</button>
                             </div>
