--- a/catalog.html
+++ b/catalog.html
@@ -1992,8 +1992,8 @@
                             target="_blank" aria-label="Перейти в ВК сообщество компании">
                             <img src="./img/icons/footer/vk.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="#"
-                            aria-label="Перейти на YouTube-канал компании">
+                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="https://www.youtube.com/@ekromtech"
+                            aria-label="Перейти на YouTube-канал компании" target="_blank">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu telegram"
@@ -2002,7 +2002,7 @@
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="https://wa.me/79220328123"
-                            aria-label="Написать в whatsapp">
+                            aria-label="Написать в whatsapp" target="_blank">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
                     </div>
@@ -2749,8 +2749,8 @@
                                 aria-label="Перейти в ВК сообщество компании">
                                 <img src="./img/icons/footer/vk.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="#"
-                                aria-label="Перейти на YouTube-канал компании">
+                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="https://www.youtube.com/@ekromtech"
+                                aria-label="Перейти на YouTube-канал компании" target="_blank">
                                 <img src="./img/icons/footer/youtube.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer telegram"
@@ -2759,7 +2759,7 @@
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
-                                aria-label="Написать в whatsapp">
+                                aria-label="Написать в whatsapp" target="_blank">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
                         </div>
