--- a/contacts.html
+++ b/contacts.html
@@ -2146,8 +2146,8 @@
                             target="_blank" aria-label="Перейти в ВК сообщество компании">
                             <img src="./img/icons/footer/vk.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="#"
-                            aria-label="Перейти на YouTube-канал компании">
+                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="https://www.youtube.com/@ekromtech"
+                            aria-label="Перейти на YouTube-канал компании" target="_blank">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu telegram"
@@ -2156,7 +2156,7 @@
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu whatsapp"
-                            href="https://wa.me/79220328123" aria-label="Написать в whatsapp">
+                            href="https://wa.me/79220328123" aria-label="Написать в whatsapp" target="_blank">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
                     </div>
@@ -2435,7 +2435,7 @@
                                     <div class="contacts-city__departments-row">
                                         <img src="./img/icons/contacts-whatsapp.svg" alt="">
                                         <div class="contacts-city__departments-value">
-                                            <a href="tel:+73433799868">+7(343)379-98-68</a>
+                                            <a href="https://wa.me/79220328123" target="_blank">+7(343)379-98-68</a>
                                             <p class="contacts-city__departments-time">
                                                 9:00 до 18:00
                                             </p>
@@ -2631,7 +2631,7 @@
                                     <div class="contacts-city__departments-row">
                                         <img src="./img/icons/contacts-whatsapp.svg" alt="">
                                         <div class="contacts-city__departments-value">
-                                            <a href="tel:+73433799868">+7(343)379-98-68</a>
+                                            <a href="https://wa.me/79220328123" target="_blank">+7(343)379-98-68</a>
                                             <p class="contacts-city__departments-time">
                                                 9:00 до 18:00
                                             </p>
@@ -2707,7 +2707,7 @@
                             <p>Станьте частью сообщества ekrom</p>
                         </div>
                         <div class="contacts-social__right">
-                            <a class="contacts-social__link vk glass skeleton" href="https://vk.com/ekromshop">
+                            <a class="contacts-social__link vk glass skeleton" href="https://vk.com/ekromshop" target="_blank">
                                 <svg width="20" height="12" viewBox="0 0 20 12" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2716,7 +2716,7 @@
                                 </svg>
                                 <span>Вконтакте</span>
                             </a>
-                            <a class="contacts-social__link instagram glass skeleton" href="https://instagram.com/ekromtech?igshid=MzRlODBiNWFlZA==">
+                            <a class="contacts-social__link instagram glass skeleton" href="https://instagram.com/ekromtech?igshid=MzRlODBiNWFlZA==" target="_blank">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_582_3689)">
@@ -2738,7 +2738,7 @@
                                 </svg>
                                 <span>Сеть с картинками</span>
                             </a>
-                            <a class="contacts-social__link youtube glass skeleton" href="https://www.youtube.com/@user-gk8ym5vm5k">
+                            <a class="contacts-social__link youtube glass skeleton" href="https://www.youtube.com/@ekromtech" target="_blank">
                                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2747,7 +2747,7 @@
                                 </svg>
                                 <span>YouTube</span>
                             </a>
-                            <a class="contacts-social__link telegram glass skeleton" href="https://t.me/ekromshop">
+                            <a class="contacts-social__link telegram glass skeleton" href="https://t.me/ekromshop" target="_blank">
                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -3031,8 +3031,8 @@
                                 aria-label="Перейти в ВК сообщество компании">
                                 <img src="./img/icons/footer/vk.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="#"
-                                aria-label="Перейти на YouTube-канал компании">
+                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="https://www.youtube.com/@ekromtech"
+                                aria-label="Перейти на YouTube-канал компании" target="_blank">
                                 <img src="./img/icons/footer/youtube.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer telegram"
@@ -3041,7 +3041,7 @@
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer whatsapp"
-                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp">
+                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp" target="_blank">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
                         </div>
