--- a/product.html
+++ b/product.html
@@ -1992,8 +1992,8 @@
                             target="_blank" aria-label="Перейти в ВК сообщество компании">
                             <img src="./img/icons/footer/vk.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="#"
-                            aria-label="Перейти на YouTube-канал компании">
+                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="https://www.youtube.com/@ekromtech"
+                            aria-label="Перейти на YouTube-канал компании" target="_blank">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu telegram"
@@ -2002,7 +2002,7 @@
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu whatsapp"
-                            href="https://wa.me/79220328123" aria-label="Написать в whatsapp">
+                            href="https://wa.me/79220328123" aria-label="Написать в whatsapp" target="_blank">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
                     </div>
@@ -2285,7 +2285,7 @@
                                             </div>
                                         </div>
                                         <div class="product-box__tools-btns">
-                                            <button class="round-btn round-btn--fav round-btn-card skeleton"
+                                            <button class="round-btn round-btn--fav round-btn-card"
                                                 aria-label="Добавить в избранное">
                                                 <svg width="18" height="17" viewBox="0 0 18 17" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -2295,7 +2295,7 @@
                                                         stroke-linejoin="round" />
                                                 </svg>
                                             </button>
-                                            <button class="round-btn round-btn--compare round-btn-card skeleton"
+                                            <button class="round-btn round-btn--compare round-btn-card"
                                                 aria-label="Добавить в сравнение">
                                                 <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -5001,8 +5001,8 @@
                                 aria-label="Перейти в ВК сообщество компании">
                                 <img src="./img/icons/footer/vk.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="#"
-                                aria-label="Перейти на YouTube-канал компании">
+                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="https://www.youtube.com/@ekromtech"
+                                aria-label="Перейти на YouTube-канал компании" target="_blank">
                                 <img src="./img/icons/footer/youtube.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer telegram"
@@ -5011,7 +5011,7 @@
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer whatsapp"
-                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp">
+                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp" target="_blank">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
                         </div>
