--- a/personal.html
+++ b/personal.html
@@ -1953,7 +1953,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="personal__item tile">
+                        <div class="personal__item personal__item--orders tile">
                             <p>Текущие заказы</p>
                         </div>
                         <div class="personal__item tile">
@@ -2220,8 +2220,8 @@
                                 aria-label="Перейти в ВК сообщество компании">
                                 <img src="./img/icons/footer/vk.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="#"
-                                aria-label="Перейти на YouTube-канал компании">
+                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="https://www.youtube.com/@ekromtech"
+                                aria-label="Перейти на YouTube-канал компании" target="_blank">
                                 <img src="./img/icons/footer/youtube.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer telegram"
@@ -2230,7 +2230,7 @@
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer whatsapp"
-                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp">
+                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp" target="_blank">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
                         </div>
