Доработал скрипт всплывающих уведомлений; подправил стили адаптива

--- a/auth.html
+++ b/auth.html
@@ -1733,7 +1733,7 @@
                                 </label>
                                 <label class="auth-form__label">
                                     <p>Телефон</p>
-                                    <input class="tel" type="number" placeholder="+7 9xx xxx xx xx" required>
+                                    <input class="tel" type="tel" placeholder="+7 9xx xxx xx xx" required>
                                 </label>
                                 <label class="auth-form__label">
                                     <p>Ваше имя</p>
@@ -2151,9 +2151,9 @@
                     <h2 class="question-form__title">
                         Ваше обращение успешно отправлено! <br> С вами свяжется наш менеджер
                     </h2>
-                    <a class="rect-btn rect-btn--question-form-success white" href="./catalog.html">
+                    <button class="rect-btn rect-btn--question-form-success white" href="./catalog.html">
                         К покупкам!
-                    </a>
+                    </button>
                 </div>
             </form>
         </div>
