--- a/favorites.html
+++ b/favorites.html
@@ -8545,9 +8545,9 @@
                     <h2 class="question-form__title">
                         Ваше обращение успешно отправлено! <br> С вами свяжется наш менеджер
                     </h2>
-                    <a class="rect-btn rect-btn--question-form-success white" href="./catalog.html">
+                    <button class="rect-btn rect-btn--question-form-success white" href="./catalog.html">
                         К покупкам!
-                    </a>
+                    </button>
                 </div>
             </form>
         </div>
