--- a/personal.html
+++ b/personal.html
@@ -1709,27 +1709,34 @@
                     <div class="personal__inner">
                         <aside class="personal__aside">
                             <div class="personal__aside-items">
-                                <div class="personal__aside-item active skeleton">
+                                <label class="personal__aside-item active skeleton" tabindex="0">
+                                    <input type="radio" name="personal" checked>
                                     Мой кабинет
-                                </div>
-                                <div class="personal__aside-item tile skeleton">
+                                </label>
+                                <label class="personal__aside-item tile skeleton" tabindex="1">
+                                    <input type="radio" name="personal">
                                     Текущие заказы
-                                </div>
-                                <div class="personal__aside-item tile skeleton">
+                                </label>
+                                <label class="personal__aside-item tile skeleton" tabindex="1">
+                                    <input type="radio" name="personal">
                                     Текущая скидка
-                                </div>
-                                <div class="personal__aside-item tile skeleton">
+                                </label>
+                                <label class="personal__aside-item tile skeleton" tabindex="1">
+                                    <input type="radio" name="personal">
                                     Личные данные
-                                </div>
-                                <div class="personal__aside-item tile skeleton">
+                                </label>
+                                <label class="personal__aside-item tile skeleton" tabindex="1">
+                                    <input type="radio" name="personal">
                                     История заказов
-                                </div>
-                                <div class="personal__aside-item tile skeleton">
+                                </label>
+                                <label class="personal__aside-item tile skeleton" tabindex="1">
+                                    <input type="radio" name="personal">
                                     Профили заказов
-                                </div>
-                                <div class="personal__aside-item skeleton">
+                                </label>
+                                <label class="personal__aside-item tile skeleton" tabindex="1">
+                                    <input type="radio" name="personal">
                                     Сменить пароль
-                                </div>
+                                </label>
                                 <a class="personal__aside-item-link skeleton" href="./cart.html">
                                     Корзина
                                 </a>
