--- a/sitemap.html
+++ b/sitemap.html
@@ -58,7 +58,7 @@
             <a target="_blank" href="./action.html">Страница акции</a>
         </li>
         <li>
-            <a target="_blank" href="./contacts.html">Страница акции</a>
+            <a target="_blank" href="./contacts.html">Страница контактов</a>
         </li>
     </ul>
 </body>
