Закончил верстку страницы О компании

--- a/sitemap.html
+++ b/sitemap.html
@@ -60,6 +60,9 @@
         <li>
             <a target="_blank" href="./contacts.html">Страница контактов</a>
         </li>
+        <li>
+            <a target="_blank" href="./about.html">Страница "О компании"</a>
+        </li>
     </ul>
 </body>
 </html>
